--- a/src/styles/utilities.css
+++ b/src/styles/utilities.css
@@ -6,6 +6,9 @@
   .flex-center {
     @apply flex items-center justify-center;
   }
+  .flex-start {
+    @apply flex items-center justify-start;
+  }
   .flex-between-center {
     @apply flex items-center justify-between;
   }
