--- a/src/styles/utilities.css
+++ b/src/styles/utilities.css
@@ -12,4 +12,29 @@
   .flex-between-center {
     @apply flex items-center justify-between;
   }
+
+  .bg-pattern {
+    background-image: linear-gradient(
+        to right,
+        rgba(128, 128, 128, 0.1) 1px,
+        transparent 1px
+      ),
+      linear-gradient(to bottom, rgba(128, 128, 128, 0.1) 1px, transparent 1px);
+    background-size: 20px 20px;
+  }
+
+  @media (prefers-color-scheme: dark) {
+    .bg-pattern {
+      background-image: linear-gradient(
+          to right,
+          rgba(200, 200, 200, 0.08) 1px,
+          transparent 1px
+        ),
+        linear-gradient(
+          to bottom,
+          rgba(200, 200, 200, 0.08) 1px,
+          transparent 1px
+        );
+    }
+  }
 }
